Use cache in bundle install

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,13 @@ services:
     command: rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/app_name
+      - bundle_path:/bundle
+    environment:
+      - BUNDLE_PATH=/bundle
     ports:
       - "3000:3000"
     links:
       - db
+
+volumes:
+  bundle_path:
